--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,15 @@
     "require": {
         "php": ">=5.5.9",
 
-        "symfony/framework-bundle": "^2.7.5",
-        "sylius/order-bundle":      "0.16.*",
-        "sylius/cart":              "0.16.*"
+        "sylius/cart": "0.16.*",
+        "sylius/order-bundle": "0.16.*",
+        "symfony/framework-bundle": "^2.7.5"
     },
     "require-dev": {
-        "phpspec/phpspec":   "~2.1",
-        "symfony/form":      "~2.3",
+        "phpspec/phpspec": "~2.1",
+        "symfony/form": "~2.3",
         "symfony/validator": "~2.3",
-        "twig/twig":         "~1.0"
+        "twig/twig": "~1.0"
     },
     "config": {
         "bin-dir": "bin"
