Symfony components set up to ^2.7

--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
-        "symfony/form": "~2.3",
-        "symfony/validator": "~2.3",
+        "symfony/form": "^2.7",
+        "symfony/validator": "^2.7",
         "twig/twig": "~1.0"
     },
     "config": {
