--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "phpspec/phpspec": "^2.4",
         "symfony/form": "^2.7",
         "symfony/validator": "^2.7",
-        "twig/twig": "~1.0"
+        "doctrine/orm": "^2.4.8,<2.5",
+        "twig/twig": "^1.0"
     },
     "config": {
         "bin-dir": "bin"
